src/objects/Order__c.object
<CustomObject>
    <description>This object is being used for SuKAM PRM PROJECT</description>
    <fields>
        <fullName>Dispatch_Status_Indicator__c</fullName>
        <formula>IF ( Total_Number_of_Closed_Order_Line_Items__c = Total_Order_Line_Items__c , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dispatch Status Indicator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dispatch_Status__c</fullName>
        <label>Dispatch Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Transit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Shipment Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Item_Code__c</fullName>
        <label>Item Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>This wil contain the product model used for Su-Kam PRM</description>
        <label>Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Price__c</fullName>
        <description>This will calculate the net price for every order line-item based on the price-book value and the quantity ordered</description>
        <formula>Price_Rate__r.Distributor__c *  Order_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Count__c</fullName>
        <label>Order Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Date_Time__c</fullName>
        <label>Order Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_No__c</fullName>
        <displayFormat>O-{0000}</displayFormat>
        <label>Order No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Order_Quantity__c</fullName>
        <label>Order Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Order Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will pull the price rate from the price-book</description>
        <label>Price Rate</label>
        <referenceTo>Price_Book__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>This will contain the product category which will be ordered for.</description>
        <label>Product Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(Order_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Closed_Order_Line_Items__c</fullName>
        <description>This will calculate the total number of order line items that have been closed i.e order line items where the dispatched qty equals or is greater than approved qty.</description>
        <label>Total Number of Closed Order Line Items</label>
        <summarizedField>Order_Line_Item__c.Order_Line_Item_Despatch__c</summarizedField>
        <summaryForeignKey>Order_Line_Item__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Order_Line_Items__c</fullName>
        <description>This contains a number equal to the total number of order line items</description>
        <label>Total Order Line Items</label>
        <summaryForeignKey>Order_Line_Item__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>submitted_time__c</fullName>
        <label>submitted time</label>
        <type>DateTime</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>My_Orders</fullName>
        <columns>NAME</columns>
        <columns>Order_Date_Time__c</columns>
        <columns>Order_Status__c</columns>
        <columns>Dispatch_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Order_Status__c</field>
            <operation>equals</operation>
            <value>Draft,Submitted</value>
        </filters>
        <label>My Orders</label>
        <sharedTo>
            <group>AllPartnerUSer</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Submitted_Orders</fullName>
        <columns>NAME</columns>
        <columns>Order_Date_Time__c</columns>
        <columns>Order_Status__c</columns>
        <columns>Dispatch_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Order_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>My Submitted Orders</label>
        <sharedTo>
            <group>AllPartnerUSer</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>On_Hold_Orders</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Order_Date_Time__c</columns>
        <columns>Order_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Order_Status__c</field>
            <operation>equals</operation>
            <value>On-hold</value>
        </filters>
        <label>&quot;On-Hold&quot; Orders</label>
        <sharedTo>
            <group>Sales</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>